--- a/Bentley.html
+++ b/Bentley.html
@@ -7,7 +7,7 @@
 	<nav>
 		<UL>
 			<LI><A HREF="index.html"> Home </A></LI>
-			<LI><A HREF="college.html"> College </A></LI>
+			<LI><A HREF="College.html"> College </A></LI>
 			<LI><A HREF="Tennis.html"> Tennis </A></LI>
 			<LI><A HREF="Downeast Maine.html"> Downeast Maine </A></LI>
 			<LI><A HREF="Bentley.html"> Bentley </A></LI>
