--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 	<IMG SRC="giannanick.jpg">
 	
 	<p style="text-align:center;"><font face="Trebuchet MS">~In order to have a good reputation you must desire to be what you want to appear. -Author Unknown<br></br>
-	<p style="text-align:center;"><font face="Trebuchet MS">~Studies Business Management at University of Maine<br></br>
-	<p style="text-align:center;"><font face="Trebuchet MS">~Pronounces name jee-AH-nuh POR-ter<br></br>
-	<p style="text-align:center;"><font face="Trebuchet MS">~Born September 22, 1995 and from Machias, Maine.<br></br>
-	<p style="text-align:center;"><font face="Trebuchet MS">~Occupation is a waitress at Helen's restaurant since 2012.<br></br>
-	<p style="text-align:center;"> Here is my profile on <a href="https://www.facebook.com/gianna.porter1"> Facebook.</a></p><br></br>
-	<p style="text-align:center;"> Here is my profile on <a href="https://www.instagram.com/giannaporter/"> Instagram.</a></p><br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">~Studies: Business Marketing at University of Maine<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">~Pronounces name: jee-AH-nuh POR-ter<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">~Born: September 22, 1995<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">~Hometown: Machias, Maine<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">~Occupation: Waitress at Helen's restaurant since 2012.<br></br>
+	<p style="text-align:center;"><a href="https://www.facebook.com/gianna.porter1"> Facebook</a></p><br></br>
+	<p style="text-align:center;"><a href="https://www.instagram.com/giannaporter/"> Instagram</a></p><br></br>
 	<p style="text-align:center;">
-	<IMG SRC="familyphoto.jpg">
+	<IMG SRC="familyphoto.jpg"width="420" height="300">
 	</p>
-	<p style="text-align:center;"><font face="Trebuchet MS">~The picture above is of me, my parents, and older brothers.<br></br> 
-	
+	<p style="text-align:center;"><font face="Trebuchet MS">Above is a picture of me with my family at my brother's wedding (l to r:  Jordan, me, Mom, Dad, & Josiah).<br></br>
 	<UL>
 		
 	
