--- a/Downeast Maine.html
+++ b/Downeast Maine.html
@@ -16,20 +16,20 @@
 	</nav>
 	<body>
 	
-	<H1><font face="Calibri"> Downeast Maine "The Lobster Legacy"</font></H1><br></br>
+	<H1><font face="Calibri"> Downeast Maine - "The Lobster Legacy"</font></H1><br></br>
 	<p style="text-align:center;">
 	<IMG SRC="josiah.jpg">
 	</p>
-	<p style="text-align:center;"><font face="Trebuchet MS">Pictured is my brother Josiah Porter with a 18 pound male lobster. My brother works for a local fisherman as a sternsman for a lifelong friend of our family on a boat called the Charlene Gail.  In Down East Maine, lobster fishing is the livelihood of many families. Most often the craft is passed down from one generation to another.  It is called carrying on the legacy. In addition to Down East Maines lobster delicacy, which is famous worldwide, it is known for other fresh seafood as well, such as clams and scallops.<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">Pictured is my brother Josiah Porter with an 18 pound male lobster. My brother works for a local fisherman as a sternsman for a lifelong friend of our family on a boat called the <i>Charlene Gail</i>.  In downeast Maine, lobster fishing is the livelihood of many families. Most often the craft is passed down from one generation to another.  It is called carrying on the legacy. In addition to Down East Maine's lobster delicacy, which is famous worldwide, the community is known for other fresh seafood, such as clams and scallops.<br></br>
 	
 	<IMG SRC="calico.jpg"><br></br>
-	<p style="text-align:center;"><font face="Trebuchet MS">Pictured above is a Calico Lobster caught by my brother Josiah Porter. The Calico Lobster is a rare specimen to catch while fishing. According to the National Geographic article entitled, Half-Orange, Half-Brown Lobster Found--How Rare is it ? There is a 1 in 30 million chance that this type of lobster will be caught.<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">Pictured above is a Calico Lobster caught by my brother Josiah Porter. The Calico Lobster is a rare specimen to catch while fishing. According to the <i>National Geographic</i> article entitled, "Half-Orange, Half-Brown Lobster Found--How Rare is it ?" there is a 1 in 30 million chance that this type of lobster will ever be caught.<br></br>
 	
 	<p style="text-align:center;">
 	<video width="320" height="240" controls>
  		 <source src="trap.m4v" type="video/mp4">
  	</p>
- 	<p style="text-align:center;"><font face="Trebuchet MS">The video above captures the crew of the Charlene Gail setting lobster traps off the Coast of Cutler Harbor.  Setting and hauling traps is a weekly task performed on average 2 to 3 times per week with the exception of its busy time, October and November, which may force the crew to fish 4 days per week. This is a weekly task performed at least 2-3 times per week and during the busy season they will set traps 4 times per week.  A typical fishing season lasts from July to the middle of December and most fishermen fish 700 to 800 traps per season.  As one can see from the video, lobster fishing is touted as one of the most dangerous jobs in the United States.<br></br> 
+ 	<p style="text-align:center;"><font face="Trebuchet MS">The video above captures the crew of the Charlene Gail setting lobster traps off the Coast of Cutler Harbor.  Setting and hauling traps is a weekly task performed on average 2 to 3 times per week with the exception of its busy time, October and November, which may force the crew to fish 4 days per week. A typical fishing season lasts from July to the middle of December and most fishermen fish 700 to 800 traps per season.  As one can see from the video, lobster fishing is touted as one of the most dangerous jobs in the United States.<br></br> 
  
  	<p style="text-align:center;">	 
 	<IMG SRC="instructions.jpg"><br></br>
