--- a/Downeast Maine.html
+++ b/Downeast Maine.html
@@ -29,7 +29,7 @@
 	<video width="320" height="240" controls>
  		 <source src="trap.m4v" type="video/mp4">
  	</p>
- 	<p style="text-align:center;"><font face="Trebuchet MS">The video above captures the crew of the Charlene Gail setting lobster traps off the Coast of Cutler Harbor.  Setting and hauling traps is a weekly task performed on average 2 to 3 times per week with the exception of its busy time, October and November, which may force the crew to fish 4 days per week. A typical fishing season lasts from July to the middle of December and most fishermen fish 700 to 800 traps per season.  As one can see from the video, lobster fishing is touted as one of the most dangerous jobs in the United States.<br></br> 
+ 	<p style="text-align:center;"><font face="Trebuchet MS">The video above captures the crew of the <i>Charlene Gail</i> setting lobster traps off the Coast of Cutler Harbor.  Setting and hauling traps is a weekly task performed on average 2 to 3 times per week with the exception of its busy time, October and November, which may force the crew to fish 4 days per week. A typical fishing season lasts from July to the middle of December and most fishermen fish 700 to 800 traps per season.  As one can see from the video, lobster fishing is touted as one of the most dangerous jobs in the United States.<br></br> 
  
  	<p style="text-align:center;">	 
 	<IMG SRC="instructions.jpg"><br></br>
