--- a/Bentley.html
+++ b/Bentley.html
@@ -35,6 +35,6 @@
 	<p style="text-align:center;">
 	<IMG SRC="firstwb.jpg" align="center">
 	</p>
-	<p style="text-align:center;"><font face="Trebuchet MS">We've wished and wished to have a puppy of our own since the early years of our childhood and that wish finally came true today! - "Jordan Porter" - Adopted:3/22/14<br></br> 
+	<p style="text-align:center;"><font face="Trebuchet MS">"We've wished and wished to have a puppy of our own since the early years of our childhood and that wish finally came true today!" - Jordan Porter - Adopted:3/22/14<br></br> 
 	
 	
