--- a/College.html
+++ b/College.html
@@ -15,6 +15,8 @@
 		</UL>
 	</nav>
 	<body>
+	<div id="container">
+				
 	
 	<p><font face="Trebuchet MS">
 	
@@ -36,3 +38,7 @@
 	<IMG SRC="RA.jpg"width="420" height="250">
 </p>
 	<p style="text-align:center;"><font face="Trebuchet MS">Sophomore Year Resident Assistant in Androscoggin Hall<br></br>
+	
+	</div>
+ 	</body>
+		
