--- a/Tennis.html
+++ b/Tennis.html
@@ -15,6 +15,7 @@
 		</UL>
 	</nav>
 	<body>
+	<div id="container">
 	
 	
 	<H1><font face="Calibri">Washington Academy Tennis</font></H1>
@@ -32,4 +33,5 @@
 </p>
 	<p style="text-align:center;"><font face="Trebuchet MS">Washington Academy Tennis Team - Senior Year<br></br></H4>
 	
-	</body>
+	</div>
+ 	</body>
