--- a/Downeast Maine.html
+++ b/Downeast Maine.html
@@ -15,6 +15,7 @@
 		</UL>
 	</nav>
 	<body>
+	<div id="container">
 	
 	<H1><font face="Calibri"> Downeast Maine - "The Lobster Legacy"</font></H1><br></br>
 	<p style="text-align:center;">
@@ -36,7 +37,8 @@
 	</p>
 	<p style="text-align:center;"><font face="Trebuchet MS">The above image demonstrates how to shell out a lobster.<br></br>
 
-	
+	</div>
+ 	</body>
 	
 	
 	
