--- a/College.html
+++ b/College.html
@@ -7,11 +7,11 @@
 	</head>
 	<nav>
 		<UL>
-			<LI><A HREF="index.html"> Home </A></LI>
-			<LI><A HREF="College.html"> College </A></LI>
-			<LI><A HREF="Tennis.html"> Tennis </A></LI>
-			<LI><A HREF="Downeast Maine.html"> Downeast Maine </A></LI>
-			<LI><A HREF="Bentley.html"> Bentley </A></LI>
+			<LI><A HREF="index.html"><b> Home </b></A></LI>
+			<LI><A HREF="College.html"><b> College </b></A></LI>
+			<LI><A HREF="Tennis.html"><b> Tennis </b></A></LI>
+			<LI><A HREF="Downeast Maine.html"><b> Downeast Maine </A></LI>
+			<LI><A HREF="Bentley Porter.html"><b> Bentley Porter </b></A></LI>
 		</UL>
 	</nav>
 	<body>
@@ -22,7 +22,7 @@
 	
 	
 	
-	<H1><font face="Calibri">University of Maine Blackbear</font></H1>
+	<H1><font face="Trebuchet MS">University of Maine Blackbear</font></H1>
 	
 		<p style="text-align:center;">
 			<IMG SRC="blackbear.jpg">
