--- a/Downeast Maine.html
+++ b/Downeast Maine.html
@@ -11,13 +11,13 @@
 			<LI><A HREF="College.html"> College </A></LI>
 			<LI><A HREF="Tennis.html"> Tennis </A></LI>
 			<LI><A HREF="Downeast Maine.html"> Downeast Maine </A></LI>
-			<LI><A HREF="Bentley.html"> Bentley </A></LI>
+			<LI><A HREF="Bentley Porter.html"> Bentley Porter </A></LI>
 		</UL>
 	</nav>
 	<body>
 	<div id="container">
 	
-	<H1><font face="Calibri"> Downeast Maine - "The Lobster Legacy"</font></H1><br></br>
+	<H1><font face="Trebuchet MS"> Downeast Maine - "The Lobster Legacy"</font></H1><br></br>
 	<p style="text-align:center;">
 	<IMG SRC="josiah.jpg">
 	</p>
