--- a/Tennis.html
+++ b/Tennis.html
@@ -11,14 +11,14 @@
 			<LI><A HREF="College.html"> College </A></LI>
 			<LI><A HREF="Tennis.html"> Tennis </A></LI>
 			<LI><A HREF="Downeast Maine.html"> Downeast Maine </A></LI>
-			<LI><A HREF="Bentley.html"> Bentley </A></LI>
+			<LI><A HREF="Bentley Porter.html"> Bentley Porter </A></LI>
 		</UL>
 	</nav>
 	<body>
 	<div id="container">
 	
 	
-	<H1><font face="Calibri">Washington Academy Tennis</font></H1>
+	<H1><font face="Trebuchet MS">Washington Academy Tennis</font></H1>
 	<p style="text-align:center;">
 		<IMG SRC="tennisbentley.jpg">
 	</p>
