--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<LI><A HREF="College.html"> College </A></LI>
 			<LI><A HREF="Tennis.html"> Tennis </A></LI>
 			<LI><A HREF="Downeast Maine.html"> Downeast Maine </A></LI>
-			<LI><A HREF="Bentley.html"> Bentley </A></LI>
+			<LI><A HREF="Bentley.html"> Bentley Porter </A></LI>
 		</UL>
 	</nav>
 	
@@ -31,14 +31,14 @@
 	<p style="text-align:center;"><font face="Trebuchet MS"> Welcome to my website!<br></br>
 	<p style="text-align:center;">
 	<IMG SRC="giannanick.jpg">
-	<p style="text-align:center;"><font face="Trebuchet MS">~ Picture above: My fiance' and I sitting on the wharf on Cutler Harbor.<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">~ <b>Picture above:</b> My fiance' and I sitting on the wharf on Cutler Harbor.<br></br>
 	
 	<p style="text-align:center;"><font face="Trebuchet MS">~In order to have a good reputation you must desire to be what you want to appear. -Author Unknown<br></br>
-	<p style="text-align:center;"><font face="Trebuchet MS">~Studies: Business Marketing at University of Maine<br></br>
-	<p style="text-align:center;"><font face="Trebuchet MS">~Pronounces name: jee-AH-nuh POR-ter<br></br>
-	<p style="text-align:center;"><font face="Trebuchet MS">~Born: September 22, 1995<br></br>
-	<p style="text-align:center;"><font face="Trebuchet MS">~Hometown: Machias, Maine<br></br>
-	<p style="text-align:center;"><font face="Trebuchet MS">~Occupation: Waitress at Helen's Restaurant since 2012.<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">~<b>Studies:</b> Business Marketing at University of Maine<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">~<b>Pronounces name:</b> jee-AH-nuh POR-ter<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">~<b>Born:</b> September 22, 1995<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">~<b>Hometown:</b> Machias, Maine<br></br>
+	<p style="text-align:center;"><font face="Trebuchet MS">~<b>Occupation:</b> Waitress at Helen's Restaurant since 2012.<br></br>
 	<p style="text-align:center;"><a href="https://www.facebook.com/gianna.porter1"> Facebook</a></p><br></br>
 	<p style="text-align:center;"><a href="https://www.instagram.com/giannaporter/"> Instagram</a></p><br></br>
 	<p style="text-align:center;">
