--- a/Bentley.html
+++ b/Bentley.html
@@ -17,7 +17,7 @@
 	<div id="container">
 	
 	
-	<H1 style="center"><font face="Calibri">Bentley Porter </font></H1>
+	<H1 style="center"><font face="Trebuchet MS">Bentley Porter </font></H1>
 
 		<p style="text-align:center;">
 		<IMG SRC="bentleygrew1.jpg"> 
