--- a/College.html
+++ b/College.html
@@ -11,7 +11,7 @@
 			<LI><A HREF="College.html"><b> College </b></A></LI>
 			<LI><A HREF="Tennis.html"><b> Tennis </b></A></LI>
 			<LI><A HREF="Downeast Maine.html"><b> Downeast Maine </A></LI>
-			<LI><A HREF="Bentley Porter.html"><b> Bentley Porter </b></A></LI>
+			<LI><A HREF="Bentley.html"><b> Bentley </b></A></LI>
 		</UL>
 	</nav>
 	<body>
