--- a/College.html
+++ b/College.html
@@ -7,11 +7,11 @@
 	</head>
 	<nav>
 		<UL>
-			<LI><A HREF="index.html"><b> Home </b></A></LI>
-			<LI><A HREF="College.html"><b> College </b></A></LI>
-			<LI><A HREF="Tennis.html"><b> Tennis </b></A></LI>
-			<LI><A HREF="Downeast Maine.html"><b> Downeast Maine </A></LI>
-			<LI><A HREF="Bentley Porter.html"><b> Bentley Porter </b></A></LI>
+			<LI><A HREF="index.html"> Home </A></LI>
+			<LI><A HREF="College.html"> College </A></LI>
+			<LI><A HREF="Tennis.html">Tennis </A></LI>
+			<LI><A HREF="Downeast Maine.html"> Downeast Maine </A></LI>
+			<LI><A HREF="Bentley Porter.html"> Bentley </A></LI>
 		</UL>
 	</nav>
 	<body>
