--- a/College.html
+++ b/College.html
@@ -11,7 +11,7 @@
 			<LI><A HREF="College.html"> College </A></LI>
 			<LI><A HREF="Tennis.html">Tennis </A></LI>
 			<LI><A HREF="Downeast Maine.html"> Downeast Maine </A></LI>
-			<LI><A HREF="Bentley Porter.html"> Bentley </A></LI>
+			<LI><A HREF="Bentley Porter.html"> Bentley Porter </A></LI>
 		</UL>
 	</nav>
 	<body>
